everything/flux-system/NetworkPolicy/allow-egress.yaml
apiVersion: networking.k8s.io/v1
ekn:
  gitOpsTarget: everything
kind: NetworkPolicy
metadata:
  labels:
    app.kubernetes.io/instance: flux-system
    app.kubernetes.io/part-of: flux
  name: allow-egress
  namespace: flux-system
spec:
  egress:
  - {}
  ingress:
  - from:
    - podSelector: {}
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
