everything/flux-system/NetworkPolicy/allow-webhooks.yaml
apiVersion: networking.k8s.io/v1
ekn:
  gitOpsTarget: everything
kind: NetworkPolicy
metadata:
  labels:
    app.kubernetes.io/instance: flux-system
    app.kubernetes.io/part-of: flux
  name: allow-webhooks
  namespace: flux-system
spec:
  ingress:
  - from:
    - namespaceSelector: {}
  podSelector:
    matchLabels:
      app: notification-controller
  policyTypes:
  - Ingress
